Bug 1717253 - Call ProcessPendingQ() after the waiting of HTTPS RR is done, r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D118321